<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_panels"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Filter by" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date"
                            android:textColor="@android:color/black" />

                        <LinearLayout
                            android:id="@+id/startDateView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:background="@drawable/rect"
                            android:gravity="center_vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_5sdp"
                                app:srcCompat="@drawable/ic_calendar_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/startDate"
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:hint="@string/start_date"
                                android:paddingLeft="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingRight="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textColor="@android:color/black" />

                        <LinearLayout
                            android:id="@+id/endDateView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:background="@drawable/rect"
                            android:gravity="center_vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_5sdp"
                                app:srcCompat="@drawable/ic_calendar_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/endDate"
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:hint="@string/end_date"
                                android:paddingLeft="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingRight="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="7"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mob_num"
                            android:textColor="@android:color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:background="@drawable/rect"
                            android:gravity="center_vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_5sdp"
                                app:srcCompat="@drawable/ic_postpaid"

                                app:tint="@color/colorPrimary" />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/mobileNoEt"
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:background="@android:color/transparent"
                                android:hint="@string/mob_num"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:paddingLeft="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingRight="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="IsSelf"
                            android:textColor="@android:color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:background="@drawable/rect"
                            android:gravity="center">


                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/isSelfSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:scaleX="1.2"
                                android:scaleY="1.3" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/walletTypeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet_type"
                        android:textColor="@android:color/black" />

                    <RelativeLayout
                        android:id="@+id/walletTypeChooserView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/rect"
                        android:gravity="center_vertical">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/walletTypeChooser"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:hint="@string/wallet_type"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                            app:tint="@color/colorPrimary" />

                    </RelativeLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/debitCreditChooserView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debit_credit"
                        android:textColor="@android:color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/rect"
                        android:gravity="center_vertical">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/debitCreditChooser"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:hint="@string/debit_credit"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                            app:tint="@color/colorPrimary" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/receivedByView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/receivedByTitle"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/received_by"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/rect"
                        android:gravity="center_vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            app:srcCompat="@drawable/ic_postpaid"

                            app:tint="@color/colorPrimary" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/receivedByEt"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:hint="@string/received_by"
                            android:importantForAutofill="no"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_10sdp" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/filter"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_accent"
                android:elevation="@dimen/_4sdp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/action_filter"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>


